--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -6,34 +6,29 @@ on:
       - main
 
 jobs:
-  java_build:
+  java-build:
+    name: Java Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      
+        uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
+          distribution: 'temurin'
           java-version: '17'
-          distribution: 'zulu'  
-
-      - name: Install Maven
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y maven
 
       - name: Build with Maven
-        working-directory: backend  # Set the correct working directory for Maven
+        working-directory: backend
         run: mvn clean install
 
   node-build:
     name: Node.js Build
     runs-on: ubuntu-latest
-    needs: java_build  # Ensure Node.js build runs after Java build
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # You only need this if you need the code in this job
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -41,9 +36,42 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        working-directory: frontend  # Ensure dependencies are installed in the correct directory
+        working-directory: frontend
         run: npm install
 
       - name: Run build
-        working-directory: frontend  # Ensure build runs in the correct directory
+        working-directory: frontend
         run: npm run build
+
+  docker-build-push:
+    name: Docker Build and Push
+    runs-on: ubuntu-latest
+    needs: [java-build, node-build]  # Ensure both Java and Node.js builds are successful
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image
+        run: |
+          docker build -t your-username/your-app:latest .
+      
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push your-username/your-app:latest
