--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -48,34 +48,34 @@ jobs:
         run: npm run build
 
   docker-build-push:
-    name: Docker Build and Push
-    runs-on: ubuntu-latest
-    needs: [java-build, node-build]  # Ensure both Java and Node.js builds are successful
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Docker image
-        run: |
-          docker build -t your-username/java-app:latest .
-      
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker push your-username/java-app:latest
+      name: Docker Build and Push
+      runs-on: ubuntu-latest
+      needs: [java-build, node-build]  # Ensure both Java and Node.js builds are successful
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
+  
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+  
+        - name: Cache Docker layers
+          uses: actions/cache@v3
+          with:
+            path: /tmp/.buildx-cache
+            key: ${{ runner.os }}-buildx-${{ github.sha }}
+            restore-keys: |
+              ${{ runner.os }}-buildx-
+  
+        - name: Log in to Docker Hub
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+  
+        - name: Build Docker image
+          run: |
+            docker build -t your-username/your-app:latest .
+  
+        - name: Push Docker image to Docker Hub
+          run: |
+            docker push your-username/your-app:latest
