--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -68,10 +68,10 @@ jobs:
           ${{ runner.os }}-buildx-
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2.2.0
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}  # Using the Docker Access Token
+        password: ${{ secrets.DOCKER_SECRET_KEY }}  # Using the Docker Access Token
 
     - name: Build Docker image
       run: |
