--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -70,8 +70,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_SECRET_KEY }}  # Using the Docker Access Token
+        username: pramodkumard15
+        password: Prakumdar@143  # Using the Docker Access Token
 
     - name: Build Docker image
       run: |
