--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -50,33 +50,44 @@ jobs:
   docker-build-push:
     name: Docker Build and Push
     runs-on: ubuntu-latest
-    needs: [java-build, node-build]  # Ensure both Java and Node.js builds are successful
-  
+    needs: [java-build, node-build]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Cache Docker layers
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: pramodkumard15
-        password: Prakumdar@143  # Using the Docker Access Token
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build Docker image
-      run: |
-        docker build -t your-username/your-app:latest .
+      # Build frontend Docker image
+      - name: Build frontend Docker image
+        run: |
+          docker build -t your-username/your-frontend-app:latest ./frontend
 
-    - name: Push Docker image to Docker Hub
-      run: |
-        docker push your-username/your-app:latest
+      # Build backend Docker image
+      - name: Build backend Docker image
+        run: |
+          docker build -t your-username/your-backend-app:latest ./backend
+
+      # Push frontend Docker image to Docker Hub
+      - name: Push frontend Docker image to Docker Hub
+        run: |
+          docker push your-username/your-frontend-app:latest
+
+      # Push backend Docker image to Docker Hub
+      - name: Push backend Docker image to Docker Hub
+        run: |
+          docker push your-username/your-backend-app:latest
