--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -70,7 +70,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
       # Build frontend Docker image
       - name: Build frontend Docker image
