--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -50,10 +50,10 @@ jobs:
   docker-build-push:
     name: Docker Build and Push
     runs-on: ubuntu-latest
-    needs: [java-build, node-build]
+    needs: [java-build, node-build]  
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -66,28 +66,34 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Debug Secrets (Check if they exist)
+        run: |
+          echo "Checking if Docker secrets are set..."
+          if [ -z "${{ secrets.DOCKER_USERNAME }}" ]; then
+            echo "DOCKER_USERNAME is missing!"
+            exit 1
+          fi
+          if [ -z "${{ secrets.DOCKER_ACCESS_TOKEN }}" ]; then
+            echo "DOCKER_ACCESS_TOKEN is missing!"
+            exit 1
+          fi
+          echo "Secrets are set correctly."
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      # Build frontend Docker image
-      - name: Build frontend Docker image
-        run: |
-          docker build -t your-username/your-frontend-app:latest ./frontend
+      - name: Verify Docker Login
+        run: docker info
 
-      # Build backend Docker image
-      - name: Build backend Docker image
+      - name: Build and Push Backend Docker Image
         run: |
-          docker build -t your-username/your-backend-app:latest ./backend
+          docker build -t your-username/backend-app:latest ./backend
+          docker push your-username/backend-app:latest
 
-      # Push frontend Docker image to Docker Hub
-      - name: Push frontend Docker image to Docker Hub
+      - name: Build and Push Frontend Docker Image
         run: |
-          docker push your-username/your-frontend-app:latest
-
-      # Push backend Docker image to Docker Hub
-      - name: Push backend Docker image to Docker Hub
-        run: |
-          docker push your-username/your-backend-app:latest
+          docker build -t your-username/frontend-app:latest ./frontend
+          docker push your-username/frontend-app:latest
