--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -50,10 +50,10 @@ jobs:
   docker-build-push:
     name: Docker Build and Push
     runs-on: ubuntu-latest
-    needs: [java-build, node-build]  
+    needs: [java-build, node-build]
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -66,7 +66,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: Debug Secrets (Check if they exist)
+      - name: Check Docker secrets
         run: |
           echo "Checking if Docker secrets are set..."
           if [ -z "${{ secrets.DOCKER_USERNAME }}" ]; then
@@ -85,15 +85,18 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      - name: Verify Docker Login
-        run: docker info
-
-      - name: Build and Push Backend Docker Image
+      - name: Build frontend Docker image
         run: |
-          docker build -t your-username/backend-app:latest ./backend
-          docker push your-username/backend-app:latest
+          docker build -t your-username/your-frontend-app:latest ./frontend
 
-      - name: Build and Push Frontend Docker Image
+      - name: Build backend Docker image
         run: |
-          docker build -t your-username/frontend-app:latest ./frontend
-          docker push your-username/frontend-app:latest
+          docker build -t your-username/your-backend-app:latest ./backend
+
+      - name: Push frontend Docker image to Docker Hub
+        run: |
+          docker push your-username/your-frontend-app:latest
+
+      - name: Push backend Docker image to Docker Hub
+        run: |
+          docker push your-username/your-backend-app:latest
