--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'zulu'
@@ -25,14 +25,20 @@ jobs:
 
       - name: Build with Maven
         working-directory: backend
-        run: mvn clean install
+        run: mvn clean install -DskipTests
+
+      - name: Archive Java artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: backend-jar
+          path: backend/target/my-app.jar  # Specific JAR name
 
   node-build:
     runs-on: ubuntu-latest
     needs: java-build
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -47,24 +53,30 @@ jobs:
         working-directory: frontend
         run: npm run build
 
+      - name: Archive frontend build
+        uses: actions/upload-artifact@v3
+        with:
+          name: frontend-build
+          path: frontend/build
+
   docker-build-push:
     name: Docker Build and Push
     runs-on: ubuntu-latest
     needs: [java-build, node-build]
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          key: ${{ runner.os }}-docker-buildx-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-buildx-
+            ${{ runner.os }}-docker-buildx-
 
       - name: Check Docker secrets
         run: |
@@ -86,17 +98,21 @@ jobs:
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
       - name: Build frontend Docker image
+        working-directory: frontend
         run: |
-          docker build -t your-username/your-frontend-app:latest ./frontend
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-frontend-app:latest .
+          docker images
 
       - name: Build backend Docker image
+        working-directory: backend
         run: |
-          docker build -t your-username/your-backend-app:latest ./backend
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-backend-app:latest .
+          docker images
 
       - name: Push frontend Docker image to Docker Hub
         run: |
-          docker push your-username/your-frontend-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/your-frontend-app:latest
 
       - name: Push backend Docker image to Docker Hub
         run: |
-          docker push your-username/your-backend-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/your-backend-app:latest
