--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'zulu'
@@ -25,20 +25,14 @@ jobs:
 
       - name: Build with Maven
         working-directory: backend
-        run: mvn clean install -DskipTests
-
-      - name: Archive Java artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: backend-jar
-          path: backend/target/my-app.jar  # Specific JAR name
+        run: mvn clean install
 
   node-build:
     runs-on: ubuntu-latest
     needs: java-build
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -53,66 +47,46 @@ jobs:
         working-directory: frontend
         run: npm run build
 
-      - name: Archive frontend build
-        uses: actions/upload-artifact@v3
-        with:
-          name: frontend-build
-          path: frontend/build
-
   docker-build-push:
     name: Docker Build and Push
     runs-on: ubuntu-latest
     needs: [java-build, node-build]
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v2
 
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-docker-buildx-${{ github.sha }}
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-docker-buildx-
-
-      - name: Check Docker secrets
-        run: |
-          echo "Checking if Docker secrets are set..."
-          if [ -z "${{ secrets.DOCKER_USERNAME }}" ]; then
-            echo "DOCKER_USERNAME is missing!"
-            exit 1
-          fi
-          if [ -z "${{ secrets.DOCKER_ACCESS_TOKEN }}" ]; then
-            echo "DOCKER_ACCESS_TOKEN is missing!"
-            exit 1
-          fi
-          echo "Secrets are set correctly."
+            ${{ runner.os }}-buildx-
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-
+      # Build frontend Docker image
       - name: Build frontend Docker image
-        working-directory: frontend
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-frontend-app:latest .
-          docker images
+          docker build -t your-username/your-frontend-app:latest ./frontend
 
+      # Build backend Docker image
       - name: Build backend Docker image
-        working-directory: backend
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-backend-app:latest .
-          docker images
+          docker build -t your-username/your-backend-app:latest ./backend
 
+      # Push frontend Docker image to Docker Hub
       - name: Push frontend Docker image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/your-frontend-app:latest
+          docker push your-username/your-frontend-app:latest
 
+      # Push backend Docker image to Docker Hub
       - name: Push backend Docker image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/your-backend-app:latest
+          docker push your-username/your-backend-app:latest
