--- a/.github/workflows/Java-Maven-nodejs-ci-cd.yml
+++ b/.github/workflows/Java-Maven-nodejs-ci-cd.yml
@@ -69,8 +69,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+          username: pramodkumard15
+          password: Prakumdar@143
       # Build frontend Docker image
       - name: Build frontend Docker image
         run: |
