--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,12 +4,12 @@ FROM maven:3.8.4-openjdk-17-slim AS build
 # Set the working directory
 WORKDIR /app
 
-# Copy the pom.xml and install dependencies
-COPY pom.xml .
+# Copy pom.xml and install dependencies
+COPY pom.xml . 
 RUN mvn dependency:go-offline
 
-# Copy the rest of the code
-COPY src /app/src
+# Copy the entire src folder from the host machine to the container
+COPY src/ /app/src/
 
 # Package the app using Maven
 RUN mvn clean package
@@ -21,10 +21,10 @@ FROM openjdk:17-slim
 WORKDIR /app
 
 # Copy the jar file from the build stage
-COPY --from=build /app/target/my-app.jar .
+COPY --from=build /app/target/my-backend-1.0-SNAPSHOT.jar my-app.jar
 
 # Expose the application port
-EXPOSE 8080
+EXPOSE 8081
 
 # Run the Java application
 CMD ["java", "-jar", "my-app.jar"]
